# flaky-detector-agent

./: .gitignore  README.md  SKILL.md  conftest.py  pyproject.toml
.github/workflows/: scorecard.yml
data/sample_history/: run-01-2026-04-23.xml  run-02-2026-04-26.xml  run-03-2026-04-29.xml  run-04-2026-05-02.xml  run-05-2026-05-05.xml
references/: flaky-patterns.md  quarantine-workflow.md
src/flaky_detector/: __init__.py  agent.py  cli.py  detector.py  parser.py  quarantine.py
tests/: test_agent.py  test_agent_real.py  test_detector.py  test_parser.py  test_quarantine.py
